--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,13 +1,29 @@
 .homepage {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 80%;
   box-sizing: border-box;
-  padding: 100px;
+  margin: 100px auto;
 }
 
 .homepage__bio {
-  width: 60%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.homepage__block {
+  display: flex;
+  align-items: center;
+}
+
+.homepage__description {
+  width: 50%;
+  margin-right: 50px;
+}
+.homepage__description:nth-child(2) {
+  margin-right: 0px;
+  margin-left: 50px;
 }
 
 .homepage__heading {
@@ -18,8 +34,8 @@
 }
 
 .homepage__text {
-  text-align: start;
-  max-width: 100%;
+  text-align: justify;
+  width: 100%;
   margin-bottom: 14px;
   margin-top: 0;
 
@@ -29,4 +45,61 @@
 }
 .homepage__text:last-of-type {
   margin-bottom: 0;
+}
+.homepage__fig {
+  width: 50%;
+  margin: 0;
+}
+.homepage__pic {
+  width: 100%;
+  object-fit: contain;
+  align-self: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+}
+
+.homepage__caption {
+  font-style: italic;
+  margin-bottom: 20px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.wave {
+  animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
+  animation-duration: 2.5s; /* Change to speed up or slow down */
+  animation-iteration-count: infinite; /* Never stop waving :) */
+  transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
+  display: inline-block;
+}
+
+@keyframes wave-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(14deg);
+  } /* The following five values can be played with to make the waving more or less extreme */
+  20% {
+    transform: rotate(-8deg);
+  }
+  30% {
+    transform: rotate(14deg);
+  }
+  40% {
+    transform: rotate(-4deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  } /* Reset for the last half to pause */
+  100% {
+    transform: rotate(0deg);
+  }
 }
