--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #96b6c5;
+  background-color: #4d4d4d;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -32,10 +32,6 @@ a:hover {
   min-height: 100vh;
 }
 
-.main {
-  display: flex;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -47,23 +43,4 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #eee0c9;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
