--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,3 +2,10 @@
   display: flex;
   flex-direction: column;
 }
+
+.line {
+  width: 50%;
+  margin-top: 80px;
+  margin-bottom: 80px;
+  opacity: 0.3;
+}
